--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "vue": "^3.4.21",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.1.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
